--- a/index.html
+++ b/index.html
@@ -36,66 +36,71 @@
 <main>
     <!-- Hero section -->
     <section class="section-hero">
-    <h1 class="text-hero">Effective Solutions for Your Business</h1>
-
-    <button type="button" class="button-hero">Order Service</button>
+        <div class="text-hero-button">
+            <h1 class="text-hero">Effective Solutions for Your Business</h1>
+            <button type="button" class="button-hero">Order Service</button>
+        </div>
     </section>
     <!-- Section 2 -->
     <section>
-        <h2>our advantages</h2> 
-        <ul>
-            <li>
-                <h3 class="title">Strategy</h3>
-                <p class="paragraph">
-                    Our goal is to identify the business
-                    problem to walk away with the perfect and creative solution.
-                </p>
-            </li>
-            <li>
-                <h3 class="title">Punctuality</h3>
-                <p class="paragraph">
-                    Bring the key message to the brand's audience for the best price within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <h3 class="title">Diligence</h3>
-                <p class="paragraph">
-                Research and confirm brands with the strongest digital growth opportunities and minimize risk.
-                </p>
-            </li>
-            <li>
-                <h3 class="title">Technologies</h3>
-                <p class="paragraph">
-                    Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-                </p>
-            </li>
-        </ul>
+    <!-- <h2>our advantages</h2> -->
+        <div class="container advantages-container">
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <h3 class="title advantages-title">Strategy</h3>
+                    <p class="paragraph">
+                        Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="title advantages-title">Punctuality</h3>
+                    <p class="paragraph">
+                        Bring the key message to the brand's audience for the best price within the shortest possible time.
+                    </p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="title advantages-title">Diligence</h3>
+                    <p class="paragraph">
+                    Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                    </p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="title advantages-title">Technologies</h3>
+                    <p class="paragraph">
+                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                    </p>
+                </li>
+            </ul>
+        </div>
     </section>
     <!-- Section 3 -->
     <section class="section-team">
         <h2 class="section-title">Our Team</h2>
-        <ul class="section-team-list">
-            <li class="team-list">
-                <img src="./images/img1.jpg" alt="employee mark" width="264" height="260" />
-                <h3 class="title">Mark Guerrero</h3>
-                <p class="paragraph">Product Designer</p>
-            </li>
-            <li class="team-list">
-                <img src="./images/img2.jpg" alt="employee tom" width="264" height="260" />
-                <h3 class="title">Tom Ford</h3>
-                <p class="paragraph">Frontend Developer</p>
-            </li>
-            <li class="team-list">
-                <img src="./images/img3.jpg" alt="employee Garcia" width="264" height="260" />
-                <h3 class="title">Camila Garcia</h3>
-                <p class="paragraph">Marketing</p>
-            </li>
-            <li class="team-list">
-                <img src="./images/img4.jpg" alt="employee Daniel" width="264" height="260" />
-                <h3 class="title">Daniel Wilson</h3>
-                <p class="paragraph">UI Designer</p>
-            </li>
-        </ul>
+        <div class="container section-team-container">
+            <ul class="section-team-list">
+                <li class="team-list">
+                    <img src="./images/img1.jpg" alt="employee mark" width="264" height="260" />
+                    <h3 class="title">Mark Guerrero</h3>
+                    <p class="paragraph">Product Designer</p>
+                </li>
+                <li class="team-list">
+                    <img src="./images/img2.jpg" alt="employee tom" width="264" height="260" />
+                    <h3 class="title">Tom Ford</h3>
+                    <p class="paragraph">Frontend Developer</p>
+                </li>
+                <li class="team-list">
+                    <img src="./images/img3.jpg" alt="employee Garcia" width="264" height="260" />
+                    <h3 class="title">Camila Garcia</h3>
+                    <p class="paragraph">Marketing</p>
+                </li>
+                <li class="team-list">
+                    <img src="./images/img4.jpg" alt="employee Daniel" width="264" height="260" />
+                    <h3 class="title">Daniel Wilson</h3>
+                    <p class="paragraph">UI Designer</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <!-- Section 4 -->
     <section>
