changes to the title section two

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <!-- Section 2 -->
     <section>
-    <h2 class="title-advantages">our advantages</h2> 
+    <h2 class="title-our-advantages">Our advantages</h2> 
         <div class="container advantages-container">
             <ul class="advantages-list">
                 <li class="advantages-item">
