--- a/index.html
+++ b/index.html
@@ -43,36 +43,36 @@
     </section>
     <!-- Section 2 -->
     <section>
-    <h2 class="title-our-advantages">Our advantages</h2> 
-        <div class="container advantages-container">
+    <div class="container advantages-container">
+        <h2 class="visually-hidden">Our advantages</h2>
             <ul class="advantages-list">
                 <li class="advantages-item">
                     <h3 class="title advantages-title">Strategy</h3>
                     <p class="paragraph">
-                        Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.
+                            Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li class="advantages-item">
                     <h3 class="title advantages-title">Punctuality</h3>
-                    <p class="paragraph">
-                        Bring the key message to the brand's audience for the best price within the shortest possible time.
+                     <p class="paragraph">
+                            Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li class="advantages-item">
                     <h3 class="title advantages-title">Diligence</h3>
                     <p class="paragraph">
-                    Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                        Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li class="advantages-item">
                     <h3 class="title advantages-title">Technologies</h3>
                     <p class="paragraph">
-                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
-        </div>
+    </div>
     </section>
     <!-- Section 3 -->
     <section class="section-team">
