added changes to section three

--- a/index.html
+++ b/index.html
@@ -81,23 +81,31 @@
             <ul class="section-team-list">
                 <li class="team-list">
                     <img src="./images/img1.jpg" alt="employee mark" width="264" height="260" />
-                    <h3 class="title">Mark Guerrero</h3>
-                     <p class="paragraph">Product Designer</p>
+                    <div class="team-title-paragraf">
+                        <h3 class="title team-title">Mark Guerrero</h3>
+                        <p class="paragraph team-paragraf">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-list">
                     <img src="./images/img2.jpg" alt="employee tom" width="264" height="260" />
-                    <h3 class="title">Tom Ford</h3>
-                    <p class="paragraph">Frontend Developer</p>
+                    <div class="team-title-paragraf">
+                        <h3 class="title team-title">Tom Ford</h3>
+                        <p class="paragraph team-paragraf">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-list">
                     <img src="./images/img3.jpg" alt="employee Garcia" width="264" height="260" />
-                    <h3 class="title">Camila Garcia</h3>
-                    <p class="paragraph">Marketing</p>
+                    <div class="team-title-paragraf">
+                        <h3 class="title team-title">Camila Garcia</h3>
+                        <p class="paragraph team-paragraf">Marketing</p>
+                    </div>
                 </li>
                  <li class="team-list">
                     <img src="./images/img4.jpg" alt="employee Daniel" width="264" height="260" />
-                    <h3 class="title">Daniel Wilson</h3>
-                    <p class="paragraph">UI Designer</p>
+                    <div class="team-title-paragraf">
+                        <h3 class="title team-title">Daniel Wilson</h3>
+                        <p class="paragraph team-paragraf">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
