--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <main>
     <!-- Hero section -->
     <section class="section-hero">
-        <div class="text-hero-button">
+        <div class="container text-hero-button">
             <h1 class="text-hero">Effective Solutions for Your Business</h1>
             <button type="button" class="button-hero">Order Service</button>
         </div>
@@ -111,49 +111,64 @@
         </div>
     </section>
     <!-- Section 4 -->
-    <section>
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-            <li>
-                <img src="./images/img5.jpg" alt="Banking App" width="360" height="300" />
-                <h3 class="title">Banking App</h3>
-                <p class="paragraph">App</p>
-            </li>
-            <li>
-                <img src="./images/img6.jpg" alt="Cashless Payment" width="360" height="300" />
-                <h3 class="title">Cashless Payment</h3>
-                <p class="paragraph">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img7.jpg" alt="Meditation App" width="360" height="300" />
-                <h3 class="title">Meditation App</h3>
-                <p class="paragraph">App</p>
-            </li>
-            <li>
-                <img src="./images/img8.jpg" alt="Taxi Service" width="360" height="300" />
-                <h3 class="title">Taxi Service</h3>
-                <p class="paragraph">Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img9.jpg" alt="Screen Illustrations" width="360" height="300" />
-                <h3 class="title">Screen Illustrations</h3>
-                <p class="paragraph">Design</p>
-            </li>
-            <li>
-                <img src="./images/img10.jpg" alt="Online Courses" width="360" height="300" />
-                <h3 class="title">Online Courses</h3>
-                <p class="paragraph">Marketing</p>
-            </li>
-        </ul>
+    <section class="portfolio">
+        <div class="container portfolio-contsiner">
+            <h2 class="section-title portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <img src="./images/img5.jpg" alt="Banking App" width="360" height="300" />
+                    <div class="portfolio-title-paragraph">
+                        <h3 class="title portfolio-title">Banking App</h3>
+                        <p class="paragraph">App</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img src="./images/img6.jpg" alt="Cashless Payment" width="360" height="300" />
+                    <div class="portfolio-title-paragraph">
+                        <h3 class="title portfolio-title">Cashless Payment</h3>
+                        <p class="paragraph">Marketing</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img src="./images/img7.jpg" alt="Meditation App" width="360" height="300" />
+                    <div class="portfolio-title-paragraph">
+                        <h3 class="title portfolio-title">Meditation App</h3>
+                        <p class="paragraph">App</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img src="./images/img8.jpg" alt="Taxi Service" width="360" height="300" />
+                    <div class="portfolio-title-paragraph">
+                        <h3 class="title portfolio-title">Taxi Service</h3>
+                        <p class="paragraph">Marketing</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img src="./images/img9.jpg" alt="Screen Illustrations" width="360" height="300" />
+                    <div class="portfolio-title-paragraph">
+                        <h3 class="title portfolio-title">Screen Illustrations</h3>
+                        <p class="paragraph">Design</p>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <img src="./images/img10.jpg" alt="Online Courses" width="360" height="300" />
+                    <div class="portfolio-title-paragraph">
+                        <h3 class="title portfolio-title">Online Courses</h3>
+                        <p class="paragraph">Marketing</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </section>
 </main>
 <!-- Footer section -->
 <footer class="page-footer">
-    <a class="logo header-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-
-    <p class="paragraph-footer">
-    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-    </p>
+    <div class="container logo-paragraph-footer">
+        <a class="logo header-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+        <p class="paragraph-footer">
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </div>
 </footer>
 </body>
 </html>
