--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
     <!-- Section 2 -->
-    <section>
+    <section class="advantages">
     <div class="container advantages-container">
         <h2 class="visually-hidden">Our advantages</h2>
             <ul class="advantages-list">
@@ -113,7 +113,7 @@
     <!-- Section 4 -->
     <section class="portfolio">
         <div class="container portfolio-contsiner">
-            <h2 class="section-title portfolio-title">Our Portfolio</h2>
+            <h2 class="section-title portfolio-container-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
                     <img src="./images/img5.jpg" alt="Banking App" width="360" height="300" />
